[gd_scene load_steps=12 format=3 uid="uid://ccwowwp3fm5n1"]

[ext_resource type="Script" path="res://scripts/activity_journal.gd" id="1_1eqp7"]
[ext_resource type="Texture2D" uid="uid://dilrbnjumim2e" path="res://Bilder/single bedroom.jpg" id="2_1t4ad"]
[ext_resource type="PackedScene" uid="uid://b8b4wuvjxyoop" path="res://scenes/stats_test_scene.tscn" id="2_2b5bh"]
[ext_resource type="PackedScene" uid="uid://xq7oam55djhf" path="res://global/pause_manager.tscn" id="3_5gmd1"]
[ext_resource type="Script" path="res://scripts/journal.gd" id="4_w8p4q"]
[ext_resource type="FontFile" uid="uid://b67sne2kgw6ye" path="res://fonts/Berry Rotunda.ttf" id="5_qwg5q"]
[ext_resource type="PackedScene" uid="uid://bd3fueljn57uy" path="res://scenes/next_activity.tscn" id="6_k8cin"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7wje7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_low2x"]
bg_color = Color(0.290368, 0.608996, 0.608874, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.284718, 0.607566, 0.660299, 1)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8rkxw"]
bg_color = Color(1.20327e-06, 0.52606, 0.528086, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.341176, 0.537255, 0.537255, 1)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jnph"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0)
shadow_size = 5

[node name="activity_journal" type="Node2D"]
script = ExtResource("1_1eqp7")

[node name="background" type="TextureRect" parent="."]
offset_left = -5.0
offset_top = -6.0
offset_right = 1156.0
offset_bottom = 647.0
texture = ExtResource("2_1t4ad")
expand_mode = 3

[node name="stats_test_scene" parent="." instance=ExtResource("2_2b5bh")]

[node name="outside" type="ColorRect" parent="."]
offset_left = 119.0
offset_top = 106.0
offset_right = 1008.0
offset_bottom = 564.0
tooltip_text = "Your journal."
color = Color(0.854902, 0.690196, 0.556863, 1)

[node name="white" type="ColorRect" parent="outside"]
light_mask = 3
visibility_layer = 3
layout_mode = 0
offset_left = 8.0
offset_top = 10.0
offset_right = 879.0
offset_bottom = 450.0

[node name="middle" type="ColorRect" parent="outside"]
layout_mode = 0
offset_left = 442.0
offset_top = 10.0
offset_right = 445.0
offset_bottom = 450.0
color = Color(0.556863, 0.478431, 0.419608, 1)

[node name="journal" type="HBoxContainer" parent="outside"]
custom_minimum_size = Vector2(0, 415)
layout_mode = 0
offset_left = 16.0
offset_top = 21.0
offset_right = 871.0
offset_bottom = 442.0
script = ExtResource("4_w8p4q")

[node name="left" type="VBoxContainer" parent="outside/journal"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2

[node name="title_journal" type="Label" parent="outside/journal/left"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_qwg5q")
theme_override_font_sizes/font_size = 20
text = "Journal"

[node name="previous_days" type="TextEdit" parent="outside/journal/left"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/background_color = Color(0.901961, 0.835294, 0.858824, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_qwg5q")
placeholder_text = "Day: 0
Activities:
  - Work
  - Faint at work
  - Talk to doctor
Journal Entries:
  - Today I fainted at work and was sent to a doctor.

Day: 1
Activities:
Journal Entries:
  (No journal entries for this day.)
"

[node name="padding" type="ColorRect" parent="outside/journal"]
custom_minimum_size = Vector2(7, 20)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="right" type="VBoxContainer" parent="outside/journal"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2

[node name="title_today" type="Label" parent="outside/journal/right"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_qwg5q")
theme_override_font_sizes/font_size = 20
text = "Today"

[node name="journal_today" type="TextEdit" parent="outside/journal/right"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/background_color = Color(0.901961, 0.835294, 0.858824, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_qwg5q")
text = "Today I am grateful for"
placeholder_text = "placeholder Text
"

[node name="save" type="Button" parent="."]
offset_left = 835.0
offset_top = 499.0
offset_right = 983.0
offset_bottom = 542.0
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_qwg5q")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_7wje7")
theme_override_styles/hover = SubResource("StyleBoxFlat_low2x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8rkxw")
theme_override_styles/normal = SubResource("StyleBoxFlat_8jnph")
text = "save entry"

[node name="next_activity" parent="." instance=ExtResource("6_k8cin")]

[node name="pause_manager" parent="." instance=ExtResource("3_5gmd1")]
visible = false

[connection signal="pressed" from="save" to="outside/journal" method="_on_save_pressed"]
[connection signal="pressed" from="next_activity" to="outside/journal" method="_on_next_activity_pressed"]
